# llmchat

./: .editorconfig  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json  ploy-workspace.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json  turbo.json
.agents/: product-marketing.md
.github/workflows/: devto-crosspost.yml  publish.yml  release-sdks.yml  sdks.yml
apps/admin/: .env.example  .gitignore  next.config.ts  package.json  ploy.yaml  tailwind.config.ts  vitest.setup.ts
apps/api/: .dev.vars.example  .env.example  env.d.ts  package.json  ploy.yaml  tsconfig.json  vitest.config.ts
apps/dashboard/: .env.example  next.config.ts  package.json  ploy.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/docs/: .gitignore  .prettierignore  mdx-components.tsx  next.config.ts  package.json  ploy.yaml  source.config.ts  tsconfig.json
apps/marketing/: .env.example  .gitignore  .prettierignore  content-collections.ts  next.config.ts  package.json  ploy.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/shopify/: .dockerignore  .env.example  .gitignore  .graphqlrc.ts  .prettierignore  Dockerfile  README.md  package.json  (+9 more)
docs/: billing-free-trial.md  dashboard-inventory.md  dashboard-restyle-plan.md  internal-notes-phase1.md  scout-ploy.txt  shopify-app-plan.md  shopify-launch-package.md  templates-sdks-launch.md
sdks/python/: README.md  pyproject.toml
sdks/python/src/clankersupport/: __init__.py
sdks/python/tests/: test_script_tag.py
(+728 files in other folders)
